namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isanchez
  labels:
     tipo: desarrollo
