bd.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: base-datos
  labels:
    tipo: "desarrollo"
spec:
  selector:
    matchLabels:
      app: bd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bd
    spec:
      containers:
      - name: bd
        image: dony1809/dbmysql:latest
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
        name: bd
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: db-volumenes
