bd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbmysql
  labels:
    tipo: "desarrollo"
    app: bd
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: bd
