webservices-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-practica
  labels:
    tipo: "desarrollo"
    run: service-practica
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache
