ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.isanchez.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-practica
                port:
                  number: 80
